--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ margin: 0 auto;
     letter-spacing: 0.03em;
     padding: 24px 0;
     margin-right: 76px;
+    position: relative;
 }
 .logo-link:hover,.logo-link:focus{
 color: #404bbf;
@@ -77,6 +78,7 @@ color: #404bbf;
     color: #2E2F42;
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link-current{
     color: #404bbf;
@@ -103,6 +105,7 @@ color: #404bbf;
     text-decoration: none;
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:hover,.address-link:focus{
     color: #404bbf;
@@ -128,7 +131,7 @@ color: #404bbf;
     
 }
 .header{
-    border-bottom: 1px solid #E7E9FC;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 /* #endregion */
 /* #region --main-- */
@@ -145,7 +148,7 @@ color: #404bbf;
 {
     color: #FFF;
     background-color: #2E2F42;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7)),url(../images/hero-bg.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     background-position: center;
     text-align: center;
     padding: 188px 0;
@@ -202,6 +205,7 @@ color: #404bbf;
     text-align: center;
     width: calc((100% - 72px) / 4);
     border-radius: 0 0 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .ourteam-teamtextbox{
     padding: 32px 0;
@@ -230,6 +234,10 @@ color: #404bbf;
     justify-content: center;
     background-color: #4D5AE5;
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-socials-link:hover, .team-socials-link:focus{
+    background-color: #31d0aa;
 }
 .team-socials-icon{
     fill: #F4F4FD;
@@ -245,6 +253,7 @@ color: #404bbf;
     width: calc((100% - 48px) / 3);
     position: relative;
     overflow: hidden;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover{
 box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
@@ -322,6 +331,10 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 .footer .container{
     display: flex;
     gap: 120px;
+    align-items: baseline;
+}
+.footer-info{
+    margin-right: 120px;
 }
 .footer-text{
     letter-spacing: 0.02em;
@@ -360,8 +373,8 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     background-color: #4D5AE5;
     border-radius: 50%;
 }
-.footer-socials-link:hover{
-    background-color: #31D0AA;
+.footer-socials-link:hover, .footer-socials-link:focus{
+    background-color: 31D0AA#;
 }
 .footer-socials-icon{
     fill: #F4F4FD;
