--- a/css/styles.css
+++ b/css/styles.css
@@ -61,13 +61,9 @@ margin: 0 auto;
     letter-spacing: 0.03em;
     padding: 24px 0;
     margin-right: 76px;
-    position: relative;
 }
 .logo-link:hover,.logo-link:focus{
 color: #404bbf;
-}
-.nav-list-item{
-    position: relative;
 }
 .nav-link {
     text-decoration: none;
@@ -79,6 +75,7 @@ color: #404bbf;
     padding: 24px 0;
     display: block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
 }
 .nav-link-current{
     color: #404bbf;
@@ -152,6 +149,11 @@ color: #404bbf;
     background-position: center;
     text-align: center;
     padding: 188px 0;
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: auto;
+
 }
 .hero-button{
     font-weight: 500;
@@ -168,6 +170,7 @@ color: #404bbf;
     display: block;
     border: none;
     margin: auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover,.hero-button:focus{
     background-color: #404BBF;
@@ -237,7 +240,7 @@ color: #404bbf;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-socials-link:hover, .team-socials-link:focus{
-    background-color: #31d0aa;
+    background-color: #404bbf;
 }
 .team-socials-icon{
     fill: #F4F4FD;
@@ -260,6 +263,9 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 }
 .portfolio-item:hover .portfolio-overlay{
     transform: translatey(0);
+}
+.portfolio-item:hover .portfolio-overlay-text{
+    transform: translateY(0%);
 }
 .portfolio-wrapper{
     position: relative;
@@ -364,9 +370,6 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     align-items: center;
     gap: 16px;
 }
-.footer-socials-item{
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 .footer-socials-link {
     display: flex;
     width: 40px;
@@ -375,6 +378,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     justify-content: center;
     background-color: #4D5AE5;
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-socials-link:hover, .footer-socials-link:focus{
     background-color: #31D0AA;
