--- a/css/styles.css
+++ b/css/styles.css
@@ -271,7 +271,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     position: relative;
     overflow: hidden;
 }
-.portfolio-overlay{
+.portfolio-overlay-text{
     position: absolute;
     top: 0;
     left: 0;
@@ -293,6 +293,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     padding: 32px 16px;
 }
 /* #endregion */
+/* #region --other-- */
 .section-title {
     line-height: 1.11;
     text-transform: capitalize;
@@ -327,6 +328,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
     display: flex;
     gap: 24px;
 }
+/* #endregion */
 /* #endregion */
 /* #region --footer-- */
 .footer{
